--- a/MyBlog/blog/templates/blog/creer_article.html
+++ b/MyBlog/blog/templates/blog/creer_article.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}Créer un article{% endblock %}
+{% block title %}Create an article{% endblock %}
 
 {% block  content %}
-    <h2>Créer un nouvel article</h2>
+    <h2>Create a new article</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p}}
-        <button type="submit">Créer</button>
+        <button type="submit">Create</button>
     </form>
 {% endblock %}
