--- a/MyBlog/blog/templates/blog/creer_category.html
+++ b/MyBlog/blog/templates/blog/creer_category.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}Créer un category{% endblock %}
+{% block title %}Create a category{% endblock %}
 
 {% block  content %}
-    <h2>Créer un nouvel category</h2>
+    <h2>Create a new category</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p}}
-        <button type="submit">Créer</button>
+        <button type="submit">Create</button>
     </form>
 {% endblock %}
