fix: Correct blog name in header and footer to "Purely Sports Blog"

--- a/MyBlog/templates/base.html
+++ b/MyBlog/templates/base.html
@@ -14,7 +14,7 @@
     <div class="site-bg"></div>
 
     <header class="top-header">
-        <h1>Welcome to Django Sports Blog</h1>
+        <h1>Welcome to Purely Sports Blog</h1>
     </header>
 
     <div class="layout-grid">
@@ -39,7 +39,7 @@
     </div>
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2025 PURELY SPORTS Blog. All rights reserved.</p>
+            <p>&copy; 2025 Purely Sports Blog. All rights reserved.</p>
             <div class="footer-socials">
                 <a href="#" title="Twitter"><img src="{% static 'img/twitter.svg' %}" alt="Twitter"/></a>
                 <a href="#" title="Instagram"><img src="{% static 'img/instagram.svg' %}" alt="Instagram"/></a>
