fix: Update brand title in header to "Purely Sports"

--- a/MyBlog/templates/includes/header.html
+++ b/MyBlog/templates/includes/header.html
@@ -3,7 +3,7 @@
     <div class="brand">
         <img src="{% static 'img/sports_logo.svg' %}" alt="Sports Blog Logo" width="56" height="56"/>
         <div>
-            <div class="brand-title">Django Sports</div>
+            <div class="brand-title">Purely Sports</div>
             <div class="brand-sub">Sports Blog</div>
         </div>
     </div>
